--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~7.1.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "ng-http-loader": "^5.0.0",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
